# App

./: .gitignore  .gitmodules
.github/workflows/: ci.yml
IntegrationTests/: Dockerfile.tests  conftest.py
IntegrationTests/DomainTests/: test_apartments_api.py  test_buildings_api.py  test_maintenanceRequest_api.py  test_residents_api.py
IntegrationTests/Utils/: HealthTests.py
backend/: .dockerignore  CMakeLists.txt  Dockerfile  Dockerfile.dev  README.md
backend/scripts/: build_and_run.sh
backend/src/: CMakeLists.txt  main.cpp
backend/src/Composition/: Apartment_composition.h  Building_composition.h  MaintenanceRequest_composition.h  Resident_composition.h
backend/src/Controllers/: ApartmentController.cpp  ApartmentController.h  BuildingController.cpp  BuildingController.h  CMakeLists.txt  MaintenanceRequestController.cpp  MaintenanceRequestController.h  README.md  ResidentController.cpp  ResidentController.h
backend/src/DTOs/: README.md  ResidentDTOMapper.h  apartment_dto.h  building_dto.h  maintenanceRequest_dto.h  resident_dto.h
backend/src/DTOs/Mappers/: ApartmentDTOMapper.h  BuildingDTOMapper.h  MaintenanceRequestDTOMapper.h  ResidentDTOMapper.h
backend/src/DTOs/requests/: create_building_request.h
backend/src/DTOs/responses/: building_response.h
backend/src/Domains/: CMakeLists.txt  apartment.cpp  apartment.h  building.cpp  building.h  maintenanceRequest.cpp  maintenanceRequest.h  resident.cpp  resident.h
backend/src/Migration/: CMakeLists.txt  main.cpp
backend/src/Migration/MigrationSchemas/: 20260124_000_schema_migrations.sql  20260124_001_Create_Residents.sql  20260124_003_Create_Residents.sql  20260316_001_Create_Buildings.sql  20260316_002_Create_Apartments.sql  20260316_004_Create_MaintenanceRequests.sql
backend/src/Migration/Migrations/: 20260124_000_schema_migrations.sql  20260124_001_Create_Residents.sql
backend/src/Migration/Runner/: CMakeLists.txt  IMigrationRunner.h  MigrationRunner.cpp  MigrationRunner.h
backend/src/Repositories/: CMakeLists.txt  CmakeLists.txt
backend/src/Repositories/PostgresDB/: CMakeLists.txt  DbConnectionFactory.cpp  DbConnectionFactory.h  IDbConnectionFactory.h  IDbSession.h  PostgresApartmentRepository.cpp  PostgresApartmentRepository.h  PostgresBuildingRepository.cpp  PostgresBuildingRepository.h  PostgresMaintenanceRequestRepository.cpp  PostgresMaintenanceRequestRepository.h  PostgresResidentRepository.cpp  PostgresResidentRepository.h
backend/src/Repositories/inmemory/: CMakeLists.txt  InMemoryApartmentRepository.cpp  InMemoryApartmentRepository.h  InMemoryBuildingRepository.cpp  InMemoryBuildingRepository.h  InMemoryMaintenanceRequestRepository.cpp  InMemoryMaintenanceRequestRepository.h  InMemoryResidentRepository.cpp  InMemoryResidentRepository.h
backend/src/Repositories/interfaces/: CMakeLists.txt  IApartmentRepository.h  IBuildingRepository.h  IMaintenanceRequest.h  IResidentRepository.h
backend/src/Routes/: README.md
backend/src/Routes/Utils/: General_API_Info_V1.h
backend/src/Routes/v1/: Apartment_routes.h  Building_routes.h  MaintenanceRequest_routes.h  Resident_routes.h
backend/src/Server/: main.cpp
backend/src/Services/: CMakeLists.txt
backend/src/Services/Apartment/: ApartmentService.cpp  ApartmentService.h  CMakeLists.txt  IApartmentService.h
backend/src/Services/Building/: BuildingService.cpp  BuildingService.h  CMakeLists.txt  IBuildingService.h
backend/src/Services/MaintenanceRequest/: CMakeLists.txt  IMaintenanceRequestService.h  MaintenanceRequestService.cpp  MaintenanceRequestService.h
backend/src/Services/Resident/: ApartmentService.cpp  CMakeLists.txt  IResidentService.h  ResidentService.cpp  ResidentService.h
backend/src/Utils/: ApiError.h  DomainEnums.h  Env.h  Logger.h
backend/tests/: CMakeLists.txt  test_hello.cpp
backend/tests/Composition/: test_apartment_composition.cpp  test_building_composition.cpp  test_maintenanceRequest_composition.cpp  test_resident_composition.cpp
backend/tests/Controllers/: test_apartment_controller.cpp  test_building_controller.cpp  test_maintenanceRequest_controller.cpp  test_resident_controller.cpp
backend/tests/DTOs/: test_ResidentDTOMapper_dto.cpp  test_apartment_dto.cpp  test_building_dto.cpp  test_maintenanceRequest_dto.cpp  test_resident_dto.cpp
backend/tests/DTOs/Mappers/: test_ApartmentDTOMapper_dto.cpp  test_BuildingDTOMapper_dto.CPP  test_BuildingDTOMapper_dto.cpp  test_ResidentDTOMapper_dto.cpp  test_maintenanceRequestDTOMapper.cpp
backend/tests/DTOs/requests/: test_create_building_request.cpp
backend/tests/DTOs/responses/: test_building_response.cpp
backend/tests/Domains/: test_apartment_domain.cpp  test_building_domain.cpp  test_maintenanceRequest_domain.cpp  test_resident_domain.cpp
backend/tests/Migrations/Runner/: test_MigrationRunner.cpp
backend/tests/Mocks/: MockDbConnectionFactory.h  MockDbSession.h  MockMigrationRunner.h
backend/tests/Repositories/InMemory/: test_InMemoryApartmentRepository.cpp  test_InMemoryBuildingRepository.cpp  test_InMemoryMaintenanceRequestRepository.cpp  test_InMemoryResidentRepository.cpp
backend/tests/Repositories/PostegresDB/: test_DbConnectionFactory.cpp  test_PostgresBuildingRepository.cpp
backend/tests/Services/: test_ApartmentResident.cpp  test_ServiceApartment.cpp  test_ServiceBuilding.cpp  test_ServiceMantananceRequest.cpp  test_ServiceResident.cpp
backend/tests/Services/Resident/: test_ServiceResident.cpp
backend/tests/Utils/: test_ApiError.cpp  test_Env.cpp  test_logger.cpp
docs/: PostgreSQLArchitecture.md
infra/: README.md  docker-compose.yml
infra/PostgresDB/: README.md
